--- a/todolist/templates/todolist/post_list.html
+++ b/todolist/templates/todolist/post_list.html
@@ -23,7 +23,8 @@ Todo-list
 <button type="submit" class="btn btn-info btn-lg" name='add_button'>Add</button>
 </form>
 {% else %}
-<a href="{% url 'login' %}" class="top-menu">Authorize</a>
+<div><a href="{% url 'login' %}" class="top-menu">Authorize</a></div>
+<div><a href="{% url 'signup' %}" class="top-menu">Sign up</a></div>
 {% endif %}
 
 </div>
